--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
             </ul>
         </div>
     </nav>
-    <header class="jumbotron d-flex card bg-primary" style="margin:50px;">
-        <div class="slider-container box">
+    <header class="jumbotron d-flex card bg-primary">
+        <div class="slider-container double">
             <div class="slider-wrapper">
                 <img src="assets/image/1.jpg" class="slide" />
                 <img src="assets/image/2.jpg" class="slide" />
@@ -38,7 +38,7 @@
         </div>
          <div class="box banner-text bg-second">
             <h1>E-sport</h1>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Similique quia tenetur, cumque impedit facere ipsam, harum libero possimus iusto error eligendi quos sunt, hic nihil architecto porro soluta expedita. Mollitia.</p>
+            <h4>merupakan suatu kompetisi permainan video pemain jamak, umumnya antara para pemain profesional</h4>
         </div>
     </header>
     <main>
@@ -48,39 +48,41 @@
         <aside>
             <article class="profile card bg-primary">
                 <h2>My Profile</h2>
-                <figure>
-                    <img src="assets/image/profile.png">
-                    <figcaption><em><strong>@Mitro</strong></em></figcaption>
-                </figure>
-                <section>
-                    <h3>Informasi Pribadi</h3>
-                    <table>
-                        <tr>
-                            <th>Nama Lengkap</th>
-                            <td>Muchamad Mitro Ubaidillah</td>
-                        </tr>
-                        <tr>
-                            <th>Nama Panggilan</th>
-                            <td>Mitro</td>
-                        </tr>
-                        <tr>
-                            <th>TGL Lahir</th>
-                            <td>12 Mei 2000</td>
-                        </tr>
-                        <tr>
-                            <th>Lokasi</th>
-                            <td>Blitar</td>
-                        </tr>
-                        <tr>
-                            <th>Telpon</th>
-                            <td>081332725004</td>
-                        </tr>
+                <div class="biodata">
+                    <figure>
+                        <img src="assets/image/profile.png">
+                        <figcaption><em><strong>@Mitro</strong></em></figcaption>
+                    </figure>
+                    <section>
+                        <h3>Informasi Pribadi</h3>
+                        <table>
                             <tr>
-                            <th>GitHub</th>
-                            <td><a href="https://bit.ly/3NXjxO9">Link</a></td>
-                        </tr>
-                   </table>
-                 </section>
+                                <th>Nama Lengkap</th>
+                                <td>Muchamad Mitro Ubaidillah</td>
+                            </tr>
+                            <tr>
+                                <th>Nama Panggilan</th>
+                                <td>Mitro</td>
+                            </tr>
+                            <tr>
+                                <th>TGL Lahir</th>
+                                <td>12 Mei 2000</td>
+                            </tr>
+                            <tr>
+                                <th>Lokasi</th>
+                                <td>Blitar</td>
+                            </tr>
+                            <tr>
+                                <th>Telpon</th>
+                                <td>081332725004</td>
+                            </tr>
+                                <tr>
+                                <th>GitHub</th>
+                                <td><a href="https://bit.ly/3NXjxO9">Link</a></td>
+                            </tr>
+                       </table>
+                     </section>
+                </div>
             </article>
         </aside>
     </main>
@@ -88,6 +90,7 @@
         <p>Belajar Dasar Pemrograman Web &#169; 2019, Dicoding Academy</p>
     </footer>
 
+    <script src="assets/js/data.js"></script>
     <script src="assets/js/script.js"></script>
     <script>
         function myFunction() {
